logs/chesstools.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/SQLAlchemy-1.2.0.egg-info'...
Listing './lib/python3.5/site-packages/chesstools'...
Compiling './lib/python3.5/site-packages/chesstools/__init__.py'...
***   File "./lib/python3.5/site-packages/chesstools/__init__.py", line 5
    print "install psyco to make your bot run much faster!"
                                                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/chesstools/ai.py'...
***   File "./lib/python3.5/site-packages/chesstools/ai.py", line 91
    raise Exception, "evaluate is unimplemented in the base AI class, and must be overridden by a function that returns a number."
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/chesstools/board.py'...
***   File "./lib/python3.5/site-packages/chesstools/board.py", line 187
    def set_square(self, (r,c), piece, position=None):
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/chesstools/book.py'...
***   File "./lib/python3.5/site-packages/chesstools/book.py", line 53
    if not os.path.isfile(db): raise InvalidBookException, 'could not find opening book at %s'%db
                                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/chesstools/move.py'...
***   File "./lib/python3.5/site-packages/chesstools/move.py", line 19
    raise Exception, "%s not a valid column"%i
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/chesstools/timer.py'...
***   File "./lib/python3.5/site-packages/chesstools/timer.py", line 77
    print 'must call "TimeLockTimer.move_sent()" before "TimeLockTimer.move_received()"'
                                                                                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/chesstools-0.1.8.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sqlalchemy'...
Listing './lib/python3.5/site-packages/sqlalchemy/connectors'...
Listing './lib/python3.5/site-packages/sqlalchemy/databases'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/firebird'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/mssql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/mysql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/oracle'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/postgresql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/sqlite'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/sybase'...
Listing './lib/python3.5/site-packages/sqlalchemy/engine'...
Listing './lib/python3.5/site-packages/sqlalchemy/event'...
Listing './lib/python3.5/site-packages/sqlalchemy/ext'...
Listing './lib/python3.5/site-packages/sqlalchemy/ext/declarative'...
Listing './lib/python3.5/site-packages/sqlalchemy/orm'...
Listing './lib/python3.5/site-packages/sqlalchemy/sql'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing/plugin'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing/suite'...
Listing './lib/python3.5/site-packages/sqlalchemy/util'...
Listing './share'...
Listing './share/python-wheels'...
